# award-flight-researcher

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.gitea/workflows/: poll.yml
.serena/: project.yml
config/: balances.example.yaml  search.example.yaml
src/researcher/: alerts.py  cli.py  config.py  db.py  pairs.py  pricing.py  seatsaero.py
tests/: test_pairs.py  test_seatsaero.py
